New pipeline finished

--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -50,7 +50,7 @@
    "id": "eb44384e-7cbc-4611-a015-e1c073f61aa9",
    "metadata": {},
    "source": [
-    "# Datasets\n",
+    "# Datasets loading\n",
     "\n",
     "Lots of different on availabale : https://towardsdatascience.com/a-data-lakes-worth-of-audio-datasets-b45b88cd4ad\n",
     "\n",
@@ -250,7 +250,7 @@
    "id": "86961904-ad36-4af8-ad21-6d51f491da61",
    "metadata": {},
    "source": [
-    "# Reservoir"
+    "# Reservoir parameters"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "id": "f7cbe486-d170-441d-b06b-b8ae78900814",
    "metadata": {},
    "source": [
-    "## Set reservoir size"
+    "## Reservoir size"
    ]
   },
   {
@@ -307,6 +307,31 @@
    "outputs": [],
    "source": [
     "RESERVOIR_SIZE = 500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0708a58-1fd0-4e71-af44-a1d5f8aa5602",
+   "metadata": {},
+   "source": [
+    "# Cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19507da3-45fc-425b-9c54-9a6405ce4bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, GroupShuffleSplit\n",
+    "\n",
+    "# Split\n",
+    "val_size=0.2\n",
+    "if is_multivariate:\n",
+    "    X_train_band, X_val_band, Y_train, Y_val = train_test_split(X_train_band, Y_train, test_size=val_size, shuffle=False, random_state=SEED)\n",
+    "else:\n",
+    "    X_train, X_val, Y_train, Y_val = train_test_split(X_train, Y_train, test_size=val_size, shuffle=False, random_state=SEED)\n"
    ]
   },
   {
@@ -358,25 +383,10 @@
    "outputs": [],
    "source": [
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
-    "from sklearn.model_selection import train_test_split, GroupShuffleSplit\n",
     "\n",
-    "# Split\n",
-    "val_size=0.1\n",
-    "if is_multivariate:\n",
-    "    X_train_band, X_val_band, Y_train, Y_val = train_test_split(X_train_band, Y_train, test_size=val_size, shuffle=False, random_state=SEED)\n",
-    "    freq_train_data = X_train_band\n",
-    "else:\n",
-    "    X_train, X_val, Y_train, Y_val = train_test_split(X_train, Y_train, test_size=val_size, shuffle=False, random_state=SEED)\n",
-    "    freq_train_data = X_train\n",
-    "\n",
-    "if is_instances_classification:\n",
-    "    flat_train_data = np.concatenate(freq_train_data, axis=0)\n",
-    "else:\n",
-    "    flat_train_data = freq_train_data\n",
+    "freq_train_data = X_train_band if is_multivariate else X_train\n",
+    "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "filtered_peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, threshold=1e-5, nperseg=1024, visualize=False)\n",
-    "\n",
-    "#print(\"Filtered peak frequencies: \", filtered_peak_freqs)\n",
-    "print(\"Number of frequencies selected :\", len(filtered_peak_freqs))\n",
     "\n",
     "if not is_multivariate:\n",
     "    common_size = len(filtered_peak_freqs)\n",
@@ -393,40 +403,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b73bdf-78fa-4525-a587-59dbdfa989d2",
-   "metadata": {},
-   "source": [
-    "### set common size"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e69057a7-9a34-4a92-a37f-23d6ac6e3b76",
-   "metadata": {},
-   "source": [
-    "**common_size** : the number of different dimensions in the input data\n",
-    "\n",
-    "**K** : the number of neurons that will receive a particular time serie as input "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a98b7a99-3f6f-404a-858a-429e90fb51d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math \n",
-    "\n",
-    "# We want the size of the reservoir to be at least 200\n",
-    "K = math.ceil(RESERVOIR_SIZE / common_size)\n",
-    "n = common_size * K\n",
-    "print(\"Dimension of our reservoir :\", n)\n",
-    "print(\"Copy of each time serie :\", K)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "41ac1066-6a2b-42ca-a8df-b5113744526d",
    "metadata": {
     "editable": true,
@@ -436,7 +412,7 @@
     "tags": []
    },
    "source": [
-    "### Standardizing the amplitudes"
+    "## Standardizing the amplitudes"
    ]
   },
   {
@@ -451,38 +427,15 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from datasets.preprocessing import scale_data\n",
     "\n",
-    "scaler_x_uni = MinMaxScaler(feature_range=(0, 1))\n",
-    "scaler_x_multi = MinMaxScaler(feature_range=(0, 1))\n",
-    "\n",
-    "if is_instances_classification:\n",
-    "    print(\"processing for Classification\")\n",
-    "    # Transform the training, validation and test data using the same scaler\n",
-    "    scaler_x_multi.fit(np.concatenate(X_train_band, axis=0))\n",
-    "\n",
-    "    X_train_band = np.array([scaler_x_multi.transform(time_series) for time_series in tqdm(X_train_band)])\n",
-    "    X_val_band = np.array([scaler_x_multi.transform(time_series) for time_series in tqdm(X_val_band)])\n",
-    "    X_test_band = np.array([scaler_x_multi.transform(time_series) for time_series in tqdm(X_test_band)])\n",
-    "\n",
-    "    if not is_multivariate:\n",
-    "        # Transform the training, validation and test data using the same scaler\n",
-    "        X_train = np.array([scaler_x_uni.transform(x).flatten() for x in tqdm(X_train)])\n",
-    "        X_val = np.array([scaler_x_uni.transform(x).flatten() for x in tqdm(X_val)])\n",
-    "        X_test = np.array([scaler_x_uni.transform(x).flatten() for x in tqdm(X_test)])\n",
-    "else :\n",
-    "    print(\"processing for Prediction\")\n",
-    "    # FOR MULTIVARIATE DATA\n",
-    "    X_train_band = scaler_x_multi.fit_transform(X_train_band)\n",
-    "    X_val_band = scaler_x_multi.transform(X_val_band)\n",
-    "    X_test_band = scaler_x_multi.transform(X_test_band)\n",
-    "    \n",
-    "    if not is_multivariate:\n",
-    "        X_train = scaler_x_uni.fit_transform(X_train)\n",
-    "        X_val = scaler_x_uni.transform(X_val)\n",
-    "        X_test = scaler_x_uni.transform(X_test)\n",
-    "\n"
+    "scaler_multi = MinMaxScaler(feature_range=(0, 1))\n",
+    "X_train_band, X_val_band, X_test_band = scale_data(X_train_band, X_val_band, X_test_band, scaler_multi, is_instances_classification)\n",
+    "            \n",
+    "if not is_multivariate:\n",
+    "    scaler_x_uni = MinMaxScaler(feature_range=(0, 1))\n",
+    "    X_train, X_val, X_test = scale_data(X_train, X_val, X_test, scaler_multi, is_instances_classification)       \n"
    ]
   },
   {
@@ -500,7 +453,7 @@
     "tags": []
    },
    "source": [
-    "## Timeseries duplications to adapt to reservoir size"
+    "## Formating"
    ]
   },
   {
@@ -524,10 +477,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e965109a-49c3-4409-9196-f5c3e9874368",
+   "id": "f2b73bdf-78fa-4525-a587-59dbdfa989d2",
    "metadata": {},
    "source": [
-    "### Pretrain"
+    "### common size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69057a7-9a34-4a92-a37f-23d6ac6e3b76",
+   "metadata": {},
+   "source": [
+    "**common_size** : the number of different dimensions in the input data\n",
+    "\n",
+    "**K** : the number of neurons that will receive a particular time serie as input "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a98b7a99-3f6f-404a-858a-429e90fb51d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math \n",
+    "\n",
+    "# We want the size of the reservoir to be at least RESERVOIR_SIZE\n",
+    "K = math.ceil(RESERVOIR_SIZE / common_size)\n",
+    "n = common_size * K\n",
+    "print(\"Dimension of our reservoir :\", n)\n",
+    "print(\"Copy of each time serie :\", K)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92409732-7c73-4f7f-93ad-356e831def33",
+   "metadata": {},
+   "source": [
+    "## noizing and duplication"
    ]
   },
   {
@@ -537,111 +524,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PRETRAIN NOISE\n",
-    "# MULTI\n",
-    "X_pretrain_band = X_train_band\n",
-    "X_pretrain_band_noisy = [instance + np.random.normal(0, noise_std, instance.shape) for instance in X_pretrain_band]\n",
+    "from datasets.preprocessing import add_noise, duplicate_data\n",
     "\n",
+    "# PRETRAIN NOISE\n",
     "# UNI\n",
     "if not is_multivariate:\n",
-    "    X_pretrain = X_train.flatten()\n",
-    "    X_pretrain_noisy = (X_train + np.random.normal(0, noise_std, X_train.shape)).flatten()\n",
-    "    \n",
-    "# PRETRAIN DUPLICATION\n",
-    "if is_instances_classification:\n",
-    "    X_pretrain_multi = []\n",
-    "    X_pretrain_multi_noisy = []\n",
-    "    for instance in X_pretrain_band:\n",
-    "        X_pretrain_multi.append(np.repeat(instance, K, axis=1).T)\n",
-    "    for instance in X_pretrain_band_noisy:\n",
-    "        X_pretrain_multi_noisy.append(np.repeat(instance, K, axis=1).T)\n",
-    "else:\n",
-    "    X_pretrain_multi = np.repeat(X_pretrain_band, K, axis=1)\n",
-    "    X_pretrain_multi_noisy = np.repeat(X_pretrain_band_noisy, K, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b4a8a9b-057b-4245-a177-f8dabc3dd101",
-   "metadata": {},
-   "source": [
-    "### For classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6177f80-2c09-41c9-bab1-80821387540b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    X_pretrain_uni = X_train.flatten()\n",
+    "    X_pretrain_noisy = (add_noise(instance, noise_std)).flatten()\n",
+    "\n",
+    "# MULTI\n",
+    "X_pretrain_band = X_train_band\n",
+    "X_pretrain_band_noisy = [add_noise(instance, noise_std) for instance in X_pretrain_band]\n",
+    "\n",
+    "\n",
+    "#Train/Val/Test\n",
     "if is_instances_classification:\n",
     "    # NOISE\n",
-    "    if not is_multivariate:\n",
     "    # UNI\n",
-    "        pass\n",
-    "    \n",
+    "    if not is_multivariate:\n",
+    "        X_train_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train, desc=\"TRAIN\")]\n",
+    "        X_val_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val, desc=\"VAL\")]\n",
+    "        X_test_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test, desc=\"TEST\")]\n",
+    "        \n",
     "    # MULTI\n",
-    "    X_train_band_noisy = [instance + np.random.normal(0, noise_std, instance.shape) for instance in tqdm(X_train_band, desc=\"TRAIN\")]\n",
-    "    X_val_band_noisy = [instance + np.random.normal(0, noise_std, instance.shape) for instance in tqdm(X_val_band, desc=\"VAL\")]\n",
-    "    X_test_band_noisy = [instance + np.random.normal(0, noise_std, instance.shape) for instance in tqdm(X_test_band, desc=\"TEST\")]\n",
+    "    X_train_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train_band, desc=\"TRAIN\")]\n",
+    "    X_val_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val_band, desc=\"VAL\")]\n",
+    "    X_test_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test_band, desc=\"TEST\")]\n",
     "\n",
     "    # DUPLICATION\n",
-    "    X_train_band_duplicated = []\n",
-    "    X_train_band_noisy_duplicated = []\n",
-    "    for i in tqdm(range(len(X_train_band))):\n",
-    "        X_train_band_duplicated.append(np.repeat(X_train_band[i], K, axis=1))\n",
-    "        X_train_band_noisy_duplicated.append(np.repeat(X_train_band_noisy[i], K, axis=1))\n",
+    "    X_pretrain_multi = duplicate_data(X_train_band, K)\n",
+    "    X_pretrain_multi_noisy = duplicate_data(X_pretrain_band_noisy, K)\n",
     "\n",
-    "    X_val_band_duplicated = []\n",
-    "    X_val_band_noisy_duplicated = []\n",
-    "    for i in tqdm(range(len(X_val_band))):\n",
-    "        X_val_band_duplicated.append(np.repeat(X_val_band[i], K, axis=1))\n",
-    "        X_val_band_noisy_duplicated.append(np.repeat(X_val_band_noisy[i], K, axis=1))\n",
+    "    X_train_band_duplicated = duplicate_data(X_train_band, K)\n",
+    "    X_train_band_noisy_duplicated = duplicate_data(X_train_band_noisy, K)\n",
+    "    X_val_band_duplicated = duplicate_data(X_val_band, K)\n",
+    "    X_val_band_noisy_duplicated = duplicate_data(X_val_band_noisy, K)\n",
+    "    X_test_band_duplicated = duplicate_data(X_test_band, K)\n",
+    "    X_test_band_noisy_duplicated = duplicate_data(X_test_band_noisy, K)\n",
     "\n",
-    "    X_test_band_duplicated = []\n",
-    "    X_test_band_noisy_duplicated = []\n",
-    "    for i in tqdm(range(len(X_test_band))):\n",
-    "        X_test_band_duplicated.append(np.repeat(X_test_band[i], K, axis=1))\n",
-    "        X_test_band_noisy_duplicated.append(np.repeat(X_test_band_noisy[i], K, axis=1))\n",
-    " \n",
-    "    del X_test_band, X_test_band_noisy, X_train_band, X_train_band_noisy, X_val_band, X_val_band_noisy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ad44618-5b86-4650-838c-78a361836ec1",
-   "metadata": {},
-   "source": [
-    "### For prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "533de743-2235-4570-9f11-253751658424",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not is_instances_classification: #if prediction\n",
-    "    if not is_multivariate:\n",
+    "\n",
+    "else:  #if prediction\n",
+    "    # NOISE\n",
     "    # UNI\n",
-    "        X_train_noisy = X_train + np.random.normal(0, noise_std, X_train.shape)\n",
-    "        X_test_noisy = X_test + np.random.normal(0, noise_std, X_test.shape)\n",
-    "        X_val_noisy = X_val + np.random.normal(0, noise_std, X_val.shape)\n",
+    "    if not is_multivariate:\n",
+    "        X_train_noisy = add_noise(X_train, noise_std)\n",
+    "        X_test_noisy = add_noise(X_test, noise_std)\n",
+    "        X_val_noisy = add_noise(X_val, noise_std)\n",
     "\n",
     "    # MULTI\n",
-    "    X_train_band_noisy = X_train_band + np.random.normal(0, noise_std, X_train_band.shape)\n",
-    "    X_val_band_noisy = X_val_band + np.random.normal(0, noise_std, X_val_band.shape)\n",
-    "    X_test_band_noisy = X_test_band + np.random.normal(0, noise_std, X_test_band.shape)\n",
+    "    X_train_band_noisy = add_noise(X_train_band, noise_std)\n",
+    "    X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
+    "    X_test_band_noisy = add_noise(X_test_band, noise_std)\n",
     "\n",
     "    # DUPLICATION\n",
-    "    X_train_band_duplicated = np.repeat(np.squeeze(np.array(X_train_band)), K, axis=1)\n",
-    "    X_val_band_duplicated = np.repeat(np.squeeze(np.array(X_val_band)), K, axis=1)\n",
-    "    X_test_band_duplicated = np.repeat(np.squeeze(np.array(X_test_band)), K, axis=1)\n",
-    "    X_train_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_train_band_noisy)), K, axis=1)\n",
-    "    X_val_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_val_band_noisy)), K, axis=1)    \n",
-    "    X_test_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_test_band_noisy)), K, axis=1)"
+    "    X_pretrain_multi = np.repeat(X_pretrain_band, K, axis=1)\n",
+    "    X_pretrain_multi_noisy = np.repeat(X_pretrain_band_noisy, K, axis=1)\n",
+    "\n",
+    "    X_train_band_duplicated = np.repeat(np.array(X_train_band), K, axis=1)\n",
+    "    X_val_band_duplicated = np.repeat(np.array(X_val_band), K, axis=1)\n",
+    "    X_test_band_duplicated = np.repeat(np.array(X_test_band), K, axis=1)\n",
+    "    X_train_band_noisy_duplicated = np.repeat(np.array(X_train_band_noisy), K, axis=1)\n",
+    "    X_val_band_noisy_duplicated = np.repeat(np.array(X_val_band_noisy), K, axis=1)    \n",
+    "    X_test_band_noisy_duplicated = np.repeat(np.array(X_test_band_noisy), K, axis=1)\n",
+    "\n",
+    "del X_train_band, X_val_band, X_test_band, X_train_band_noisy, X_val_band_noisy, X_test_band_noisy"
    ]
   },
   {
@@ -740,6 +686,7 @@
     "    total_score = 0\n",
     "    average_nb = 3\n",
     "    for _ in range(average_nb):  # Repeat the process three times\n",
+    "        # CROSS-VALIDATION\n",
     "\n",
     "        # PREPROCESSING\n",
     "        pretrain_data = X_pretrain_multi\n",
