smoothing of peak frequencies extraction + removed unecessary recording of array when not needed

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b33230f-1ad4-4b2c-99a5-b249c9efdb35",
+   "id": "f3d3a899-289b-4681-b02b-075d15cef4e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +163,15 @@
   },
   {
    "cell_type": "raw",
-   "id": "2d322db7-9d62-4d60-9514-41d11822f03b",
+   "id": "7cb7234b-1963-43d5-89cb-eae67b8b0b80",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-11T11:00:09.410918Z",
+     "iopub.status.busy": "2024-05-11T11:00:09.410294Z",
+     "iopub.status.idle": "2024-05-11T11:00:10.521511Z",
+     "shell.execute_reply": "2024-05-11T11:00:10.521146Z",
+     "shell.execute_reply.started": "2024-05-11T11:00:09.410893Z"
+    },
     "scrolled": true
    },
    "source": [
@@ -173,49 +180,6 @@
     "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcbdeb64-a393-46aa-b744-03bde8624cba",
-   "metadata": {},
-   "source": [
-    "# Reservoir parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "658c676f-999b-4f75-9991-0e4de2ecf3ad",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "## Activation function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "615a38d2df41a727",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
-    "\n",
-    "# the activation function choosen for the rest of the experiment\n",
-    "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
-    "activation_function = lambda x : tanh(x)\n",
-    "\n",
-    "plt.plot(np.linspace(0, 1.1, 100), activation_function(np.linspace(0, 1.1, 100)))\n",
-    "plt.grid()"
    ]
   },
   {
@@ -299,18 +263,27 @@
     "\n",
     "freq_train_data = X_train_band if is_multivariate else X_train\n",
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
-    "filtered_peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, threshold=1e-5, nperseg=1024, visualize=True)\n",
+    "\n",
+    "WINDOW_LENGTH = 10\n",
+    "\n",
+    "smoothed_peaks_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=True)\n",
+    "nb_smoothed = len(smoothed_peaks_freqs[0]) if is_multivariate else len(smoothed_peaks_freqs)\n",
+    "print(\"Smoothed peaks: \", nb_smoothed)\n",
+    "\n",
+    "peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=1, threshold=1e-5, nperseg=1024, visualize=True)\n",
+    "nb_peaks = len(peak_freqs[0]) if is_multivariate else len(peak_freqs)\n",
+    "print(\"Non-smoothed peaks: \", nb_peaks)\n",
     "\n",
     "if not is_multivariate:\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        filtered_peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1\n",
     "    )\n",
     "    X_val_band = generate_multivariate_dataset(\n",
-    "        filtered_peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1\n",
     "    )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "        filtered_peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1\n",
-    "    )\n"
+    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "    )"
    ]
   },
   {
@@ -476,7 +449,7 @@
    "id": "d4b33224-cc12-4edd-948c-235f415a4ab8",
    "metadata": {},
    "source": [
-    "## Formating"
+    "## Data format"
    ]
   },
   {
@@ -497,11 +470,7 @@
     "        print(\"Common index for multivariate prediction should be 0\")\n",
     "        common_size = X_train_raw.shape[common_index]\n",
     "else:\n",
-    "    common_size = len(filtered_peak_freqs)\n",
-    "\n",
-    "        \n",
-    "\n",
-    "RESERVOIR_SIZE = 500"
+    "    common_size = len(filtered_peak_freqs)\n"
    ]
   },
   {
@@ -642,6 +611,8 @@
    "source": [
     "import math \n",
     "\n",
+    "RESERVOIR_SIZE = 500\n",
+    "\n",
     "# We want the size of the reservoir to be at least RESERVOIR_SIZE\n",
     "K = math.ceil(RESERVOIR_SIZE / common_size)\n",
     "n = common_size * K\n",
@@ -678,6 +649,42 @@
     "    raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
     "\n",
     "TIME_INCREMENT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd8001c-ba74-457f-9518-c0afa04f3606",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "### Activation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "615a38d2df41a727",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
+    "\n",
+    "# the activation function choosen for the rest of the experiment\n",
+    "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
+    "activation_function = lambda x : tanh(x)\n",
+    "\n",
+    "plt.plot(np.linspace(0, 1.1, 100), activation_function(np.linspace(0, 1.1, 100)))\n",
+    "plt.grid()"
    ]
   },
   {
@@ -720,11 +727,11 @@
     "    Win *= input_scaling\n",
     "\n",
     "    W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                          target_rate, RATE_SPREAD, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=False, visualize=False)\n",
+    "                          target_rate, RATE_SPREAD, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=False, record_history=True)\n",
     "    variance_history=None\n",
     "    #W, state_history, variance_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "    #                    min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=True,\n",
-    "    #                                                    n_jobs = 1, visualize=False)\n",
+    "    #                                                    n_jobs = 1, record_history=True)\n",
     "\n",
     "    connectivity =  W.count_nonzero() / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
