--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -122,15 +122,8 @@
   },
   {
    "cell_type": "raw",
-   "id": "c323705c-cd7b-47fa-9aeb-650f9167c79f",
+   "id": "bee95f6c-898c-4136-97f0-887e0a8efb72",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T11:41:12.324565Z",
-     "iopub.status.busy": "2024-05-10T11:41:12.324435Z",
-     "iopub.status.idle": "2024-05-10T11:41:13.522603Z",
-     "shell.execute_reply": "2024-05-10T11:41:13.522329Z",
-     "shell.execute_reply.started": "2024-05-10T11:41:12.324556Z"
-    },
     "scrolled": true
    },
    "source": [
@@ -169,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4db8ff-0c3f-442d-bcac-df775c95dec8",
+   "id": "95586d8c-0525-4b8c-9937-34226691ce63",
    "metadata": {
     "scrolled": true
    },
@@ -180,43 +173,6 @@
     "dataset_name = \"FSDD\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7c53119-545f-4673-8104-cd0e1f69a4c7",
-   "metadata": {},
-   "source": [
-    "## Formating"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f49c2d5-3902-42cb-92e2-15506b523954",
-   "metadata": {},
-   "source": [
-    "### Check data formating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8dab936-68c4-4abf-8a71-719bb3989931",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if is_instances_classification:\n",
-    "    common_index = 1\n",
-    "else:\n",
-    "    common_index = 0\n",
-    "\n",
-    "if is_multivariate and is_instances_classification:\n",
-    "    print(\"Common index for multivariate classification should be 1\")\n",
-    "    print(\"\\nCheck it ! \\nFirst array \", X_train_raw[0].shape, \" and second array\", X_train_raw[2].shape)\n",
-    "    common_size = X_train_raw[0].shape[common_index]\n",
-    "elif is_multivariate and not is_instances_classification:\n",
-    "    print(\"Common index for multivariate prediction should be 0\")\n",
-    "    common_size = X_train_raw.shape[common_index]\n"
    ]
   },
   {
@@ -260,27 +216,6 @@
     "\n",
     "plt.plot(np.linspace(0, 1.1, 100), activation_function(np.linspace(0, 1.1, 100)))\n",
     "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7cbe486-d170-441d-b06b-b8ae78900814",
-   "metadata": {},
-   "source": [
-    "## Reservoir size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0f44547",
-   "metadata": {
-    "is_executing": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "RESERVOIR_SIZE = 500"
    ]
   },
   {
@@ -360,6 +295,8 @@
     "\n",
     "Y_train = []\n",
     "Y_val = []\n",
+    "\n",
+    "WINDOW_LENGTH = 10\n",
     "    \n",
     "for i, (train_index, val_index) in enumerate(splits):\n",
     "    x_train = flexible_indexing(X_train_raw, train_index)\n",
@@ -375,7 +312,8 @@
     "    # PREPROCESSING        \n",
     "    freq_train_data = x_train_band if is_multivariate else x_train\n",
     "    flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
-    "    filtered_peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, threshold=1e-5, nperseg=1024, visualize=False)\n",
+    "    extract_peak_frequencies(flat_train_data, sampling_rate, smooth=False, threshold=1e-5, nperseg=1024, visualize=False)\n",
+    "    filtered_peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
     "    \n",
     "    if not is_multivariate:\n",
     "        common_size = len(filtered_peak_freqs)\n",
@@ -465,6 +403,7 @@
     "start_step = 30\n",
     "end_step = 500\n",
     "SLICE_RANGE = slice(start_step, end_step)\n",
+    "RESERVOIR_SIZE = 500\n",
     "\n",
     "function_name = \"hadsp\" # \"desp\" ou \"hadsp\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
@@ -493,8 +432,8 @@
     "        rate_spread = trial.suggest_float('rate_spread', 0.01, 0.4, step=0.005)\n",
     "    # DESP\n",
     "    else:\n",
-    "        min_variance = trial.suggest_float('min_variance', 0.001, 0.1, step=0.001)\n",
-    "        variance_window = trial.suggest_float('variance_window', 0.01, 0.1, step=0.005)\n",
+    "        min_variance = trial.suggest_float('min_variance', 0.001, 0.02, step=0.001)\n",
+    "        variance_window = trial.suggest_float('variance_window', 0.01, 0.05, step=0.002)\n",
     "        max_variance = min_variance + variance_window\n",
     "    \n",
     "\n",
@@ -540,11 +479,11 @@
     "            Win *= input_scaling\n",
     "    \n",
     "            if function_name == \"hadsp\":\n",
-    "                W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
-    "                                        target_rate, rate_spread, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=False, visualize=False)\n",
+    "                W, _ = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
+    "                                        target_rate, rate_spread, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=False)\n",
     "            elif function_name == \"desp\":\n",
-    "                W, state_history, _ = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
-    "                                        min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=True, n_jobs = 1, visualize=False)\n",
+    "                W, _, _ = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
+    "                                        min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=True, n_jobs = -1)\n",
     "            else:\n",
     "                raise ValueError(f\"Invalid function: {function_name}\")\n",
     "            \n",
@@ -595,6 +534,7 @@
     "    engine_kwargs={\"pool_size\": 20, \"connect_args\": {\"timeout\": 10}},\n",
     ")\n",
     "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
+    "print(study_name)\n",
     "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
@@ -671,7 +611,7 @@
     "    ridge = trial.suggest_int('ridge', -10, 1)\n",
     "    RIDGE_COEF = 10**ridge\n",
     "\n",
-    "    if variate_type == \"multi\" \n",
+    "    if variate_type == \"multi\":\n",
     "        if is_instances_classification:\n",
     "            common_index = 1\n",
     "            common_size = X_train_raw[0].shape[common_index]\n",
@@ -683,102 +623,38 @@
     "\n",
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
-    "    nb_splits=3\n",
-    "    if is_instances_classification:\n",
-    "        if groups is None:\n",
-    "            splits = StratifiedKFold(n_splits=nb_splits, shuffle=True).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
+    "    for i in range(nb_splits):\n",
+    "        if variate_type == \"multi\":\n",
+    "            if is_instances_classification:\n",
+    "                common_index = 1\n",
+    "                common_size = X_train_band[i][0].shape[common_index]\n",
+    "            else:\n",
+    "                common_index = 1\n",
+    "                common_size = X_train_band[i].shape[common_index]\n",
     "        else:\n",
-    "            splits = StratifiedGroupKFold(n_splits=nb_splits, shuffle=True).split(X_train_raw, np.argmax(Y_train_raw, axis=1), groups)\n",
-    "    else: #prediction\n",
-    "        splits = TimeSeriesSplit(n_splits=nb_splits).split(X_train_raw)\n",
-    "    for i, (train_index, val_index) in enumerate(splits):\n",
-    "        X_train = flexible_indexing(X_train_raw, train_index)\n",
-    "        X_val = flexible_indexing(X_train_raw, val_index)\n",
-    "        Y_train = flexible_indexing(Y_train_raw, train_index)\n",
-    "        Y_val = flexible_indexing(Y_train_raw, val_index)\n",
-    "        # SPLITS\n",
-    "        if is_multivariate:\n",
-    "            X_train_band, X_val_band, X_test_band = X_train, X_val, X_test_raw\n",
-    "            del X_train, X_val\n",
-    "        else:\n",
-    "            X_test = X_test_raw\n",
-    "            \n",
-    "        # PREPROCESSING        \n",
-    "        freq_train_data = X_train_band if is_multivariate else X_train\n",
-    "        flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
-    "        filtered_peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, threshold=1e-5, nperseg=1024, visualize=False)\n",
-    "        \n",
-    "        if not is_multivariate:\n",
     "            common_size = len(filtered_peak_freqs)\n",
-    "            X_train_band = generate_multivariate_dataset(\n",
-    "                filtered_peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1\n",
-    "            )\n",
-    "            X_val_band = generate_multivariate_dataset(\n",
-    "                filtered_peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1\n",
-    "            )\n",
-    "\n",
-    "        scaler_multi = MinMaxScaler(feature_range=(0, 1))\n",
-    "        X_train_band, X_val_band, X_test_band = scale_data(X_train_band, X_val_band, X_test_band, scaler_multi, is_instances_classification)\n",
-    "                    \n",
-    "        if not is_multivariate:\n",
-    "            scaler_x_uni = MinMaxScaler(feature_range=(0, 1))\n",
-    "            X_train, X_val, X_test = scale_data(X_train, X_val, X_test, scaler_multi, is_instances_classification)       \n",
-    "        \n",
+    "            \n",
     "        # We want the size of the reservoir to be at least RESERVOIR_SIZE\n",
     "        K = math.ceil(RESERVOIR_SIZE / common_size)\n",
     "        n = common_size * K\n",
     "        \n",
-    "        # PRETRAIN NOISE\n",
-    "        # UNI\n",
-    "        if not is_multivariate:\n",
-    "            X_pretrain_uni = X_train.flatten()\n",
-    "            X_pretrain_noisy = (add_noise(X_train, noise_std)).flatten()\n",
+    "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
+    "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "        \n",
-    "        # MULTI\n",
-    "        X_pretrain_band = X_train_band\n",
-    "        X_pretrain_band_noisy = [add_noise(instance, noise_std) for instance in X_pretrain_band]\n",
-    "        \n",
-    "        \n",
-    "        #Train/Val/Test\n",
-    "        if is_instances_classification:\n",
-    "            # NOISE\n",
-    "            # UNI\n",
-    "            if not is_multivariate:\n",
-    "                X_train_noisy = [add_noise(instance, noise_std) for instance in X_train]\n",
-    "                X_val_noisy = [add_noise(instance, noise_std) for instance in X_val]\n",
-    "                \n",
-    "            # MULTI\n",
-    "            X_train_band_noisy = [add_noise(instance, noise_std) for instance in X_train_band]\n",
-    "            X_val_band_noisy = [add_noise(instance, noise_std) for instance in X_val_band]\n",
-    "        \n",
-    "        else:  #if prediction\n",
-    "            # NOISE\n",
-    "            # UNI\n",
-    "            if not is_multivariate:\n",
-    "                X_train_noisy = add_noise(X_train, noise_std)\n",
-    "                X_val_noisy = add_noise(X_val, noise_std)\n",
-    "        \n",
-    "            # MULTI\n",
-    "            X_train_band_noisy = add_noise(X_train_band, noise_std)\n",
-    "            X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
-    "\n",
-    "        train_data = X_train_band_duplicated # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
-    "        val_data = X_val_band_noisy_duplicated if data_type == \"noisy\" else X_val_band\n",
-    "\n",
     "        # random + multi\n",
     "        Win_random, W_random, bias_random =  init_matrices(n, 1, connectivity,  K, sr)\n",
     "        bias_random= bias_random*bias_scaling\n",
     "        Win_random= Win_random*input_scaling    \n",
     "\n",
     "        if is_instances_classification:\n",
-    "            reservoir_random, readout_random = init_and_train_model_for_classification(W_random, Win_random, bias_random, leaky_rate, activation_function, train_data, Y_train, 1, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "            reservoir_random, readout_random = init_and_train_model_for_classification(W_random, Win_random, bias_random, leaky_rate, activation_function, train_data, Y_train[i], 1, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
     "            Y_pred = predict_model_for_classification(reservoir_random, readout_random, val_data, 1)\n",
-    "            score = compute_score(Y_pred, Y_val, is_instances_classification)\n",
+    "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
-    "            esn_random = init_and_train_model_for_prediction(W_random_, Win_random, bias_random, leaky_rate, activation_function, train_data, Y_train, RIDGE_COEF)\n",
+    "            esn_random = init_and_train_model_for_prediction(W_random, Win_random, bias_random, leaky_rate, activation_function, train_data, Y_train[i], RIDGE_COEF)\n",
     "            Y_pred =  esn_random.run(val_data, reset=False)\n",
     "        \n",
-    "            score = compute_score(Y_pred, Y_val, is_instances_classification)\n",
+    "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "\n",
     "        total_score += score\n",
     "        \n",
@@ -813,6 +689,7 @@
     ")\n",
     "\n",
     "study_name = \"random_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
+    "print(study_name)\n",
     "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
